--- a/contemporary.html
+++ b/contemporary.html
@@ -7,6 +7,7 @@
     </head>
 
 <body>
+    <div id=list>
     <nav>
         <ul>
             <li><a href=index.html>Index</a></li>
@@ -15,7 +16,9 @@
             <li><a href=photographers.html>photographers</a></li>
         </ul>
     </nav>
+</div>
     <h1>Today’s Photography </h1>
+
     <div id="content"><p>
         Give the digital camera revolution about ten or fifteen years to stew and 
         now we find ourselves landed here in the present. We trudge knee-deep through 
