--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
     <link href="midterm.css" rel="stylesheet" media="screen">
     </head>
 
-<body>
+<body><div id=list>
     <nav>
         <ul>
             <li><a href=index.html>Index</a></li>
@@ -14,8 +14,9 @@
             <li><a href=contemporary.html>contemporary</a></li>
             <li><a href=photographers.html>photographers</a></li>
         </ul>
-    </nav>
+    </nav></div>
     <h1>The History of Photography</h1>
+    
     <div id="content"><p>
         Fast forward about 2,200 years. It is around 1826 and we find ourselves 
         back with Joseph Nicephore Niepce. He is looking out his window and he 
