--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
 
 <body>
+    <div id=list>
     <nav>
         <ul>
             <li><a href=index.html>Index</a></li>
@@ -15,8 +16,14 @@
             <li><a href=photographers.html>photographers</a></li>
         </ul>
     </nav>
+</div>
     <h1>About Photography </h1>
-    <div id="content"><p>
+    <p class='rag'>
+        <marquee id='r'>Welcome to my page</marquee></p>
+    <br>
+    <div id="content">
+    
+        <p>
         Photography is the art, application and practice of creating durable images
         by recording light, either electronically by means of an image sensor, or 
         chemically by means of a light-sensitive material such as photographic film.
@@ -56,5 +63,6 @@
         itself on the inside of the box thus making an inverted image.
         
     </p></div>
+   
 </body>
 </html>
