--- a/photographers.html
+++ b/photographers.html
@@ -6,7 +6,7 @@
     <link href="midterm.css" rel="stylesheet" media="screen">
     </head>
 
-<body>
+<body><div id=list>
     <nav>
         <ul>
             <li><a href=index.html>Index</a></li>
@@ -15,7 +15,9 @@
             <li><a href=photographers.html>photographers</a></li>
         </ul>
     </nav>
+</div>
     <h1> Robert Frank </h1>
+
     <div id="content"><p>
         There was never a more prolific photographer than Robert Frank. From 1941, 
         he worked as a commercial photographer in Zurich, Basel and Geneva.
@@ -67,7 +69,6 @@
     </p></div>
     <h1>The Cemetary</h1>
     <div id="content"><p>
-        The Cemetary
         This image is part of Graciela Iturbide’s series on the Juchitan indigenous culture, 
         a major focus of her work from 1979 to 1988. Located in the state of Oaxaca, Mexico, the 
         Juchitan is a matriarchal society in which women are in charge of everything from commerce 
