--- a/contemporary.html
+++ b/contemporary.html
@@ -7,6 +7,7 @@
     </head>
 
 <body>
+<div id=grad>
     <div id=list>
     <nav>
         <ul>
@@ -56,5 +57,6 @@
         <img src="image/eart-phot-frommoon_600x400.jpg">
         
     </p></div>
+</div>
 </body>
 </html>
