--- a/photographers.html
+++ b/photographers.html
@@ -6,7 +6,9 @@
     <link href="midterm.css" rel="stylesheet" media="screen">
     </head>
 
-<body><div id=list>
+<body>
+<div id=grad>
+<div id=list>
     <nav>
         <ul>
             <li><a href=index.html>Index</a></li>
@@ -82,5 +84,6 @@
         
         
     </p></div>
+</div>
 </body>
 </html>
