--- a/history.html
+++ b/history.html
@@ -6,7 +6,9 @@
     <link href="midterm.css" rel="stylesheet" media="screen">
     </head>
 
-<body><div id=list>
+<body>
+<div id=grad>
+<div id=list>
     <nav>
         <ul>
             <li><a href=index.html>Index</a></li>
@@ -56,6 +58,6 @@
         
         
     </p></div>
-
+<div id=grad>
 </body>
 </html>
